--- a/views/layour2.erb
+++ b/views/layour2.erb
@@ -1,10 +1,61 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Andrews Site 2 | <%= @title %></title>
-    <meta charset="utf-8">
-    </head>
-	<body>
+    <title>Andrew Fomera (2) | <%= @title %></title>
+
+      <meta name="viewport" content="width=device-width" />
+      <link rel="stylesheet" href="stylesheets/foundation.css">
+      <link rel="stylesheet" href="stylesheets/app.css">
+
+     <!--[if lt IE 9]>
+      <link rel="stylesheet" href="stylesheets/ie.css">
+     <![endif]-->
+     <script src="javascripts/modernizr.foundation.js"></script>
+      <!-- IE Fix for HTML5 Tags -->
+      <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+  </head>
+    <body>
+
+  <div class="row">
+    <div class="four columns">
+      <h2>Andrew Fomera</h2>
+    </div>
+    <div class="four columns">
+
+    </div>
+    <div class="four columns">
+        <a href="#" class="fc-webicon twitter large"> </a>|
+<a href="#" class="fc-webicon facebook large">Like us on Facebook</a> | <a href="#" class="fc-webicon google large"> </a>
+    </div>
+  </div>
+
+  <div class="row">
+  <ul class="nav-bar ">
+  <li class="active"><a href="#">Home</a></li>
+  <li class="has-flyout">
+    <a href="#">About Me</a>
+    <a href="#" class="flyout-toggle"><span> </span></a>
+    <ul class="flyout">
+      <li><a href="#">Education</a></li>
+      <li><a href="#">My Projects</a></li>
+      <li><a href="#">My Interests</a></li>
+    </ul>
+  </li>
+
+  <li><a href="#">Contact Me</a></li>
+  <li><a href="#">My Blog</a></li>
+</ul>
+
+
+  </div>
+
     <%= yield %>
     </body>
 </html>
