Add Foundation/Site Layout

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,26 +1,5 @@
-/* --------------------------------------------------
-   Table of Contents
------------------------------------------------------
-:: Shared Styles
-:: Page Name 1
-:: Page Name 2
-*/
+@import "foundation";
 
-
-/* -----------------------------------------
-   Shared Styles
------------------------------------------ */
-
-
-
-/* -----------------------------------------
-   Page Name 1
------------------------------------------ */
-
-
-
-
-/* -----------------------------------------
-   Page Name 2
------------------------------------------ */
-
+.social {
+  text-align: right;
+}
