--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,8 @@
-about page
+<div class="row">
+  <div class="tweleve columns">
+    <h2>About Me!</h2>
+       <p>First of all, let me say thank you for reading this extraordinarily long page.. so without further ado, here’s my About Me.</p>
+  </div>
+</div>
+
+
