--- a/public/stylesheets/foundation-style/orbit.css
+++ b/public/stylesheets/foundation-style/orbit.css
@@ -4,14 +4,14 @@
  * http://www.opensource.org/licenses/mit-license.php
 */
 /* Container ---------------------- */
-/* line 9, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 9, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper {
   width: 1px;
   height: 1px;
   position: relative;
 }
 
-/* line 14, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 14, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit {
   width: 1px;
   height: 1px;
@@ -20,12 +20,12 @@ div.orbit {
   margin-bottom: 17px;
 }
 
-/* line 21, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 21, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit.with-bullets {
   margin-bottom: 40px;
 }
 
-/* line 24, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 24, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit .orbit-slide {
   max-width: 100%;
   position: absolute;
@@ -33,14 +33,14 @@ div.orbit .orbit-slide {
   left: 0;
 }
 
-/* line 30, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 30, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit a.orbit-slide {
   border: none;
   line-height: 0;
   display: none;
 }
 
-/* line 35, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 35, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit div.orbit-slide {
   width: 100%;
   height: 100%;
@@ -48,7 +48,7 @@ div.orbit div.orbit-slide {
 
 /* Note: If your slider only uses content or anchors, you're going to want to put the width and height declarations on the ".orbit>div" and "div.orbit>a" tags in addition to just the .orbit-wrapper */
 /* Timer ---------------------- */
-/* line 43, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 43, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.timer {
   width: 40px;
   height: 40px;
@@ -61,7 +61,7 @@ div.orbit-wrapper div.timer {
   z-index: 31;
 }
 
-/* line 54, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 54, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.rotator {
   display: block;
   width: 40px;
@@ -69,11 +69,11 @@ div.orbit-wrapper span.rotator {
   position: absolute;
   top: 0;
   left: -20px;
-  background: url('/images/foundation/orbit/rotator-black.png?1342233955') no-repeat;
+  background: url('/public/images/foundation/orbit/rotator-black.png?1342233955') no-repeat;
   z-index: 3;
 }
 
-/* line 64, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 64, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.mask {
   display: block;
   width: 20px;
@@ -85,19 +85,19 @@ div.orbit-wrapper span.mask {
   overflow: hidden;
 }
 
-/* line 74, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 74, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.rotator.move {
   left: 0;
 }
 
-/* line 77, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 77, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.mask.move {
   width: 40px;
   left: 0;
-  background: url('/images/foundation/orbit/timer-black.png?1342233955') repeat 0 0;
+  background: url('/public/images/foundation/orbit/timer-black.png?1342233955') repeat 0 0;
 }
 
-/* line 82, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 82, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.pause {
   display: block;
   width: 40px;
@@ -105,30 +105,30 @@ div.orbit-wrapper span.pause {
   position: absolute;
   top: 0;
   left: 0;
-  background: url('/images/foundation/orbit/pause-black.png?1342233955') no-repeat;
+  background: url('/public/images/foundation/orbit/pause-black.png?1342233955') no-repeat;
   z-index: 4;
   opacity: 0;
 }
 
-/* line 93, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 93, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper span.pause.active {
-  background: url('/images/foundation/orbit/pause-black.png?1342233955') no-repeat 0 -40px;
+  background: url('/public/images/foundation/orbit/pause-black.png?1342233955') no-repeat 0 -40px;
 }
 
-/* line 97, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 97, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.timer:hover span.pause,
 div.orbit-wrapper span.pause.active {
   opacity: 1;
 }
 
 /* Captions ---------------------- */
-/* line 102, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 102, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .orbit-caption {
   display: none;
   font-family: "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 
-/* line 106, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 106, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .orbit-wrapper .orbit-caption {
   background: #000;
   background: rgba(0, 0, 0, 0.6);
@@ -145,12 +145,12 @@ div.orbit-wrapper span.pause.active {
 }
 
 /* Directional Nav ---------------------- */
-/* line 121, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 121, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.slider-nav {
   display: block;
 }
 
-/* line 124, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 124, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.slider-nav span {
   width: 39px;
   height: 50px;
@@ -162,31 +162,31 @@ div.orbit-wrapper div.slider-nav span {
   cursor: pointer;
 }
 
-/* line 134, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 134, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.slider-nav span.right {
-  background: url('/images/foundation/orbit/right-arrow.png?1342233955');
+  background: url('/public/images/foundation/orbit/right-arrow.png?1342233955');
   background-size: 100%;
   right: 0;
 }
 
-/* line 139, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 139, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit-wrapper div.slider-nav span.left {
-  background: url('/images/foundation/orbit/left-arrow.png?1342233955');
+  background: url('/public/images/foundation/orbit/left-arrow.png?1342233955');
   background-size: 100%;
   left: 0;
 }
 
-/* line 145, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 145, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .lt-ie9 div.orbit-wrapper div.slider-nav span.right {
-  background: url('/images/foundation/orbit/right-arrow-small.png?1342233955');
+  background: url('/public/images/foundation/orbit/right-arrow-small.png?1342233955');
 }
-/* line 146, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 146, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .lt-ie9 div.orbit-wrapper div.slider-nav span.left {
-  background: url('/images/foundation/orbit/left-arrow-small.png?1342233955');
+  background: url('/public/images/foundation/orbit/left-arrow-small.png?1342233955');
 }
 
 /* Bullet Nav ---------------------- */
-/* line 151, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 151, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets {
   position: absolute;
   z-index: 30;
@@ -197,40 +197,40 @@ ul.orbit-bullets {
   padding: 0;
 }
 
-/* line 160, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 160, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li {
   float: left;
   margin-left: 5px;
   cursor: pointer;
   color: #999;
   text-indent: -9999px;
-  background: url('/images/foundation/orbit/bullets.jpg?1342233955') no-repeat 4px 0;
+  background: url('/public/images/foundation/orbit/bullets.jpg?1342233955') no-repeat 4px 0;
   width: 13px;
   height: 12px;
   overflow: hidden;
 }
 
-/* line 171, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 171, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.active {
   color: #222;
   background-position: -8px 0;
 }
 
-/* line 175, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 175, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.has-thumb {
   background: none;
   width: 100px;
   height: 75px;
 }
 
-/* line 180, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 180, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.active.has-thumb {
   background-position: 0 0;
   border-top: 2px solid #000;
 }
 
 /* Fluid Layout ---------------------- */
-/* line 187, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 187, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit img.fluid-placeholder {
   visibility: hidden;
   position: static;
@@ -238,12 +238,12 @@ div.orbit img.fluid-placeholder {
   width: 100%;
 }
 
-/* line 193, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 193, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 div.orbit, div.orbit-wrapper {
   width: 100% !important;
 }
 
-/* line 195, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 195, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets {
   position: absolute;
   z-index: 30;
@@ -254,45 +254,45 @@ ul.orbit-bullets {
   padding: 0;
 }
 
-/* line 204, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 204, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li {
   float: left;
   margin-left: 5px;
   cursor: pointer;
   color: #999;
   text-indent: -9999px;
-  background: url('/images/foundation/orbit/bullets.jpg?1342233955') no-repeat 4px 0;
+  background: url('/public/images/foundation/orbit/bullets.jpg?1342233955') no-repeat 4px 0;
   width: 13px;
   height: 12px;
   overflow: hidden;
 }
 
-/* line 215, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 215, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.has-thumb {
   background: none;
   width: 100px;
   height: 75px;
 }
 
-/* line 220, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 220, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.active {
   color: #222;
   background-position: -8px 0;
 }
 
-/* line 224, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 224, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 ul.orbit-bullets li.active.has-thumb {
   background-position: 0 0;
   border-top: 2px solid #000;
 }
 
 /* Correct timer in IE */
-/* line 230, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 230, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .lt-ie9 .timer {
   display: none !important;
 }
 
-/* line 231, ../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
+/* line 231, ../../../../.rvm/gems/ruby-1.9.3-p194/gems/zurb-foundation-3.0.5/stylesheets/foundation/orbit.scss */
 .lt-ie9 div.caption {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000);
