--- a/views/layour2.erb
+++ b/views/layour2.erb
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Andrew Fomera (2) | <%= @title %></title>
+    <title>Andrew Fomera | <%= @title %></title>
 
       <meta name="viewport" content="width=device-width" />
       <link rel="stylesheet" href="stylesheets/foundation.css">
@@ -15,7 +15,8 @@
      <!--[if lt IE 9]>
       <link rel="stylesheet" href="stylesheets/ie.css">
      <![endif]-->
-     <script src="javascripts/modernizr.foundation.js"></script>
+
+     <script src="javascripts/foundation/modernizr.foundation.js"></script>
       <!-- IE Fix for HTML5 Tags -->
       <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,35 +28,40 @@
     <div class="four columns">
       <h2>Andrew Fomera</h2>
     </div>
-    <div class="four columns">
-
-    </div>
-    <div class="four columns">
-        <a href="#" class="fc-webicon twitter large"> </a>|
-<a href="#" class="fc-webicon facebook large">Like us on Facebook</a> | <a href="#" class="fc-webicon google large"> </a>
+    <div class="three columns offset-by-five social"> <br />
+        <a href="#"><img src="images/fc-webicon-facebook.png" /> </a>
+        <a href="#"><img src="images/fc-webicon-twitter.png" /> </a>
+        <a href="#"><img src="images/fc-webicon-googleplus.png" />  </a>
     </div>
   </div>
 
   <div class="row">
   <ul class="nav-bar ">
-  <li class="active"><a href="#">Home</a></li>
+  <li><a href="/">Home</a></li>
   <li class="has-flyout">
-    <a href="#">About Me</a>
+    <a href="/about">About Me</a>
     <a href="#" class="flyout-toggle"><span> </span></a>
     <ul class="flyout">
-      <li><a href="#">Education</a></li>
-      <li><a href="#">My Projects</a></li>
-      <li><a href="#">My Interests</a></li>
+      <li><a href="/about#education">Education</a></li>
+      <li><a href="/about#projects">My Projects</a></li>
+      <li><a href="/about#interests">My Interests</a></li>
     </ul>
   </li>
 
-  <li><a href="#">Contact Me</a></li>
-  <li><a href="#">My Blog</a></li>
+  <li><a href="/contact">Contact Me</a></li>
+  <li><a href="http://andrewfomera.blogspot.com/">My Blog</a></li>
 </ul>
-
-
   </div>
 
     <%= yield %>
+
+  <script src="javascripts/jquery.min.js"></script>
+  <script src="javascripts/foundation/jquery.reveal.js"></script>
+  <script src="javascripts/foundation/jquery.orbit-1.4.0.js"></script>
+  <script src="javascripts/foundation/jquery.customforms.js"></script>
+  <script src="javascripts/foundation/jquery.placeholder.min.js"></script>
+  <script src="javascripts/foundation/jquery.tooltips.js"></script>
+  <script src="javascripts/app.js"></script>
+
     </body>
 </html>
