--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,67 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Andrews Site | <%= @title %></title>
-    <meta charset="utf-8">
-    </head>
-	<body>
+    <title>Andrew Fomera | <%= @title %></title>
+
+      <meta name="viewport" content="width=device-width" />
+      <link rel="stylesheet" href="stylesheets/foundation.css">
+      <link rel="stylesheet" href="stylesheets/app.css">
+
+     <!--[if lt IE 9]>
+      <link rel="stylesheet" href="stylesheets/ie.css">
+     <![endif]-->
+
+     <script src="javascripts/foundation/modernizr.foundation.js"></script>
+      <!-- IE Fix for HTML5 Tags -->
+      <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+  </head>
+    <body>
+
+  <div class="row">
+    <div class="four columns">
+      <h2>Andrew Fomera</h2>
+    </div>
+    <div class="three columns offset-by-five social"> <br />
+        <a href="http://facebook.com/AndrewFomera"><img src="images/fc-webicon-facebook.png" /> </a>
+        <a href="http://twitter.com/AndrewFomera"><img src="images/fc-webicon-twitter.png" /> </a>
+        <a href="https://plus.google.com/103642665191412740065/"><img src="images/fc-webicon-googleplus.png" />  </a>
+    </div>
+  </div>
+
+  <div class="row">
+  <ul class="nav-bar ">
+  <li class="<%= 'active' if @title == 'Welcome' %>"><a href="/">Home</a></li>
+  <li class="has-flyout <%= 'active' if @title == 'About Me' %>">
+    <a href="/about">About Me</a>
+    <a href="#" class="flyout-toggle"><span> </span></a>
+    <ul class="flyout">
+      <li><a href="/about#education">Education</a></li>
+      <li><a href="/about#projects">My Projects</a></li>
+      <li><a href="/about#interests">My Interests</a></li>
+    </ul>
+  </li>
+
+  <li class="<%= 'active' if @title == 'Contact Me' %>"><a href="/contact">Contact Me</a></li>
+  <li><a href="http://andrewfomera.blogspot.com/">My Blog</a></li>
+</ul>
+  </div>
+
     <%= yield %>
+
+  <script src="javascripts/jquery.min.js"></script>
+  <script src="javascripts/foundation/jquery.reveal.js"></script>
+  <script src="javascripts/foundation/jquery.orbit-1.4.0.js"></script>
+  <script src="javascripts/foundation/jquery.customforms.js"></script>
+  <script src="javascripts/foundation/jquery.placeholder.min.js"></script>
+  <script src="javascripts/foundation/jquery.tooltips.js"></script>
+  <script src="javascripts/app.js"></script>
+
     </body>
 </html>
