--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,11 +1,11 @@
 
 <div class="row">
-<div class="three columns">
-<img src="http://andrewfomera.com/wordpress/wp-content/uploads/2010/11/70690_1296720141_1971764_n.jpg" />
-</div>
+  <div class="three columns">
+    <img src="http://andrewfomera.com/wordpress/wp-content/uploads/2010/11/70690_1296720141_1971764_n.jpg" />
+  </div>
   <div class="nine columns">
     <h2>Contact Me!</h2>
-    <p>Hi, I'm so glad to hear you want to get in touch with me.. if you would be so kind as to fill out this form I'll get back to you as soon as possible! </p>
+    <p>Hi, I'm so glad to hear you want to get in touch with me.. if you would be so kind as to fill out this form I'll get back to you as soon as possible! Or you can use the information to the side and try to get a hold of me that way!</p>
 
     <form action="/contact" method="POST" class="six columns">
       <label for="contact-name">Your Name</label>
@@ -18,9 +18,13 @@
       <textarea id="contact-message" required name="contact-message"></textarea>
 
         <button type="submit" class="regular button">Submit</button>
-
     </form>
-
+        <div class="six columns panel  radius">
+          <h5>My Information</h5>
+          <p><strong>Tweet at Me</strong> @AndrewFomera</p>
+          <p><strong>Phone</strong> (573) 560 9338</p>
+          <p><strong>Email</strong> andrew@andrewfomera.com</p>
+        </div>
 
   </div>
 </div>
