--- a/views/layout2.erb
+++ b/views/layout2.erb
@@ -7,16 +7,16 @@
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Andrew Fomera | <%= @title %></title>
+    <title>Andrew Fomera  2 | <%= @title %></title>
 
       <!-- Stylesheets -->
       <meta name="viewport" content="width=device-width" />
-      <link rel="stylesheet" href="stylesheets/foundation.css">
-      <link rel="stylesheet" href="stylesheets/app.css">
+      <link rel="stylesheet" href="../stylesheets/foundation.css">
+      <link rel="stylesheet" href="../stylesheets/app.css">
       <!--- End Stylesheets -->
 
 
-     <script src="javascripts/foundation/modernizr.foundation.js"></script>
+     <script src="../javascripts/foundation/modernizr.foundation.js"></script>
   </head>
     <body>
 
@@ -25,21 +25,21 @@
       <h2>Andrew Fomera</h2>
     </div>
     <div class="three columns offset-by-five social"> <br />
-        <a href="http://facebook.com/AndrewFomera"><img src="images/fc-webicon-facebook.png" /> </a>
-        <a href="http://twitter.com/AndrewFomera"><img src="images/fc-webicon-twitter.png" /> </a>
-        <a href="https://plus.google.com/103642665191412740065/"><img src="images/fc-webicon-googleplus.png" />  </a>
+        <a href="http://facebook.com/AndrewFomera"><img src="../images/fc-webicon-facebook.png" /> </a>
+        <a href="http://twitter.com/AndrewFomera"><img src="../images/fc-webicon-twitter.png" /> </a>
+        <a href="https://plus.google.com/103642665191412740065/"><img src="../images/fc-webicon-googleplus.png" />  </a>
     </div>
   </div>
 
   <div class="row">
   <ul class="nav-bar ">
   <li class="<%= 'active' if @title == 'Welcome' %>"><a href="/">Home</a></li>
-  <li class="has-flyout <%= 'active' if @title == 'About Me' %>">
+  <li class="has-flyout <%= 'active' if @title == 'About Me' %> <%= 'active' if @title == 'My Projects' %>">
     <a href="/about">About Me</a>
     <a href="#" class="flyout-toggle"><span> </span></a>
     <ul class="flyout">
       <li><a href="/about#education">Education</a></li>
-      <li><a href="/about/projects">My Projects</a></li>
+      <li class="<%= 'active' if @title == 'My Projects' %>"><a href="/about/projects">My Projects</a></li>
       <li><a href="/about#interests">My Interests</a></li>
     </ul>
   </li>
@@ -51,13 +51,13 @@
 
     <%= yield %>
 
-  <script src="javascripts/jquery.min.js"></script>
-  <script src="javascripts/foundation/jquery.reveal.js"></script>
-  <script src="javascripts/foundation/jquery.orbit-1.4.0.js"></script>
-  <script src="javascripts/foundation/jquery.customforms.js"></script>
-  <script src="javascripts/foundation/jquery.placeholder.min.js"></script>
-  <script src="javascripts/foundation/jquery.tooltips.js"></script>
-  <script src="javascripts/app.js"></script>
+  <script src="../javascripts/jquery.min.js"></script>
+  <script src="../javascripts/foundation/jquery.reveal.js"></script>
+  <script src="../javascripts/foundation/jquery.orbit-1.4.0.js"></script>
+  <script src="../javascripts/foundation/jquery.customforms.js"></script>
+  <script src="../javascripts/foundation/jquery.placeholder.min.js"></script>
+  <script src="../javascripts/foundation/jquery.tooltips.js"></script>
+  <script src="../javascripts/app.js"></script>
 
     </body>
 </html>
