--- a/views/projects.erb
+++ b/views/projects.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="tweleve columns">
-    <h2>About Me!</h2>
+    <h2>My Projects!</h2>
        <p>This is the story about the time</p>
   </div>
 </div>
