Prepare for deployment

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,7 +1,21 @@
 <div class="row">
   <div class="tweleve columns">
     <h2>About Me!</h2>
-       <p>This is the story about the time</p>
+       <div class="two columns">
+       <img src="http://lh6.googleusercontent.com/-abkVlUGqZvY/Taow7sW9DSI/AAAAAAAAABE/y0q_y_96Q7Q/s323/76184_1481797447033_1296720141_31094890_1331938_n.jpg"/>
+       </div> <div class="ten columns"> <p>My name is Andrew Fomera (in case you hadn't caught that memo..) and I am a web enthusiast.. also know as web junky, geek, nerd and so forth. I'm not sure how you found my site, but please read on and let me know what you think!</p>
+     </div>
+      <h3><a href="#education"></a>Education</h3>
+      <p>I grew up in a town in what is known to be smackdab in the middle of the United States, in a small town in Missouri. I attended high school at <a href="http://elsberryschools.com/"><b>Elsberry High School</b></a> and graduated in May of 2011. While attending High School I also attended <a href="http://pltc.k12.mo.us/"><b>Pike-Lincoln Technical Center</b></a> for two years and participated in the <a href="http://pltc.k12.mo.us/electronic_technology.html">Computer & Neworking Technology</a> class.</p>
+
+      <p>After I graudated High School I left the next fall and took my first semester of college at <a href="http://nwmissouri.edu">Northwest Missouri State</a>. However after my first semester I moved south and now I'm attending classes at Shelton State Community College in Tuscaloosa, Alabama.</p>
+      <p>While education is something that is important to me, I value my family more than anything in the world.</p>
+
+
+      <h3>Interests</h3>
+      <p>At a young age, I took a keen interest in computers and anything electronic. I'm interested in learning how things work and seeing if I can adapt that to my needs(this site is actually the result of that interest!)</p>
+      <p>I can remember getting a toy truck and then after playing with it and getting bored of it just zooming around the floor, taking it down to my room in the basement and <em>taking it apart.</em> I wanted to see how it worked and what I learned at that young age was there are a lot of little screws to a simple looking truck.</p>
+      <p>Other than knowing how/why things work I enjoy <strong>gaming</strong>, <strong>family</strong>, and <strong>web design/development.</strong> If you'd like to see some of the projects I've completed or am working on click on the <a href="/about/projects">My Projects</a> link.
   </div>
 </div>
 
