--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="three columns">
-    <img src="http://andrewfomera.com/wordpress/wp-content/uploads/2010/11/70690_1296720141_1971764_n.jpg" />
+    <img src="http://lh3.googleusercontent.com/-1uuWwUwefqQ/TgvgdxRSsPI/AAAAAAAAAJE/jWP74l3C_94/s552/DSC06581.jpg" />
   </div>
   <div class="nine columns">
     <h2>Contact Me!</h2>
