--- a/views/layout2.erb
+++ b/views/layout2.erb
@@ -7,7 +7,7 @@
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Andrew Fomera  2 | <%= @title %></title>
+    <title><%= @title %> / Andrew Fomera</title>
 
       <!-- Stylesheets -->
       <meta name="viewport" content="width=device-width" />
@@ -45,7 +45,7 @@
   </li>
 
   <li class="<%= 'active' if @title == 'Contact Me' %>"><a href="/contact">Contact Me</a></li>
-  <li><a href="http://andrewfomera.blogspot.com/">My Blog</a></li>
+  <li><a href="/blog">My Blog</a></li>
 </ul>
   </div>
 
@@ -58,6 +58,15 @@
   <script src="../javascripts/foundation/jquery.placeholder.min.js"></script>
   <script src="../javascripts/foundation/jquery.tooltips.js"></script>
   <script src="../javascripts/app.js"></script>
+  <div class="row">
+   <hr />
+   <div class="three columns">
+      (C) 2012 Andrew Fomera
+    </div>
+    <div class="three columns offset-by-five social">
+      <a href="/">Home</a> | <a href="/contact">Contact Me</a> | <a href="/blog">My Blog</a> <br /> <br />
+       </div>
 
+   </div>
     </body>
 </html>
