--- a/views/about.erb
+++ b/views/about.erb
@@ -12,7 +12,7 @@
       <p>While education is something that is important to me, I value my family more than anything in the world.</p>
 
 
-      <h3>Interests</h3>
+      <h3><a href="#interests"></a>Interests</h3>
       <p>At a young age, I took a keen interest in computers and anything electronic. I'm interested in learning how things work and seeing if I can adapt that to my needs(this site is actually the result of that interest!)</p>
       <p>I can remember getting a toy truck and then after playing with it and getting bored of it just zooming around the floor, taking it down to my room in the basement and <em>taking it apart.</em> I wanted to see how it worked and what I learned at that young age was there are a lot of little screws to a simple looking truck.</p>
       <p>Other than knowing how/why things work I enjoy <strong>gaming</strong>, <strong>family</strong>, and <strong>web design/development.</strong> If you'd like to see some of the projects I've completed or am working on click on the <a href="/about/projects">My Projects</a> link.
