--- a/views/projects.erb
+++ b/views/projects.erb
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="tweleve columns">
     <h2>My Projects!</h2>
-         <p>I enjoy tinkering around with web design/development and here is where I'll list some of my proud, and not so proud achievements for the interwebs to view and see.</p>
+         <p>I enjoy tinkering around with web design/development and here is where I'll list some of my proud, and not so proud achievements for the interwebs to see.</p>
   </div>
 </div>
   <div class="row">
@@ -19,22 +19,31 @@
         <img src="../images/sites/andrewfomera.png" />
        <h5>AndrewFomera.com</h5>
         <p>This was a complete build up from the ground up. Starting with the Foundation framework from Zurb. For more information click the button</p>
-         <a href="#" class="button" data-reveal-id="myModal">More information</a>
+         <a href="#" class="button" data-reveal-id="AndrewFomera">More information</a>
       </div>
     </div>
     <div class="six columns">
       <div class="panel">
-       <h5>This is a regular panel.</h5>
-        <p>It has an easy to override visual style, and is appropriately subdued. </p>
+         <img src="../images/sites/explorers.png" />
+       <h5>OFallonExplorers.com</h5>
+        <p>The O'Fallon Police Explorer Post 2943 was a organization I was involved in while I was in high school, I helped to develop the website for the post and it saw over 4000 fourm posts while I was there through multiple iterations of the site. </p>
+        <a href="#" class="button" data-reveal-id="explorers">More information</a>
       </div>
     </div>
   </div>
 
 
-  <div id="myModal" class="reveal-modal">
+  <div id="AndrewFomera" class="reveal-modal">
   <h2>AndrewFomera.com</h2>
   <p class="lead">Completely rebuilt</p>
   <p><img src="../images/sites/andrewfomera.png" alt="AnrewFomera.com Screenshot"/></p>
   <p>AndrewFomera.com is built using Sinatra, which is a lightweight framework for Ruby. Thanks to the Foundation framework by Zurb I was able to get my design up and running with a working prototype in about three hours.</p>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+<div id="explorers" class="reveal-modal">
+  <h2>OFallonExplorers.com</h2>
+  <p class="lead">Design/Wordpress Installation/Forum Setup</p>
+  <p><img src="../images/sites/explorers.png" alt="AnrewFomera.com Screenshot"/></p>
+  <p>Making the O'Fallon Police Explorer's website was a lot of fun for me, I had the chance to learn about something that interested me while doing what I love. This required a custom CSS/HTML template which I converted to use with WordPress and then I installed vBulliten for the forum software after having used Simple Machines SMF.</p>
   <a class="close-reveal-modal">&#215;</a>
 </div>
