Fix arts to art

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="nine columns">
     <h2>Welcome!</h2>
-     <p>My name is <strong>Andrew Fomera</strong> and I am a student who's interested in gaming, web design/development and in general computers. You've stumbled upon my personal site where I'll put my works of arts and everything about me in one, nice package to view.</p>
+     <p>My name is <strong>Andrew Fomera</strong> and I am a student who's interested in gaming, web design/development and in general computers. You've stumbled upon my personal site where I'll put my works of art and everything about me in one, nice package to view.</p>
      <p>Just in case it wasn't clear, I am enrolled in college and I enjoy long walks on the beach and romantic candle-lit dinners. If you're interested in getting to know more about me, view my about me page or <a href="/contact">get in touch</a> with me!</p>
     <p>- Andrew Fomera</p>
   </div>
